--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <nav>
-        <div>
-            <a href="">home</a>
-        <a href="">about</a>
-        <a href="">Contact us</a>
-        <a href="">Social Media profile</a>
+        <div class="navi">
+        <a href="#">home</a>
+        <a href="#about">about</a>
+        <a href="#contact">Contact us</a>
+        <a href="#social">Social Media profile</a>
         </div>
         
     </nav>
@@ -50,7 +50,7 @@
     </form>   
     </section>
 
-    <section>
+    <section id="social">
         <a href="">Instagram</a>
         <a href="">LinkedIn</a>
         <a href="">Facebook</a>
